wk_taa_taaqa/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>SubSegment__c</fullName>
        <label>SubSegment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Proprietor</fullName>
                </value>
                <value>
                    <fullName>2-4 Total Employees</fullName>
                </value>
                <value>
                    <fullName>5-9 Total Employees</fullName>
                </value>
                <value>
                    <fullName>10-19 Total Employees</fullName>
                </value>
                <value>
                    <fullName>20-49 Total Employees</fullName>
                </value>
                <value>
                    <fullName>50-99 Total Employees</fullName>
                </value>
                <value>
                    <fullName>100+ Total Employees</fullName>
                </value>
                <value>
                    <fullName>Top 100 Firms</fullName>
                </value>
                <value>
                    <fullName>Global Enterprise</fullName>
                </value>
                <value>
                    <fullName>Large Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Dept of Agriculture</fullName>
                </value>
                <value>
                    <fullName>Dept of Commerce</fullName>
                </value>
                <value>
                    <fullName>Dept of Defense</fullName>
                </value>
                <value>
                    <fullName>Dept of Energy</fullName>
                </value>
                <value>
                    <fullName>Dept of Health and Human Services</fullName>
                </value>
                <value>
                    <fullName>Dept of Homeland Security</fullName>
                </value>
                <value>
                    <fullName>Dept of Housing and Urban Development</fullName>
                </value>
                <value>
                    <fullName>Dept of Interior</fullName>
                </value>
                <value>
                    <fullName>Dept of Justice</fullName>
                </value>
                <value>
                    <fullName>Dept of Labor</fullName>
                </value>
                <value>
                    <fullName>Dept of State</fullName>
                </value>
                <value>
                    <fullName>Dept of Treasury (not IRS)</fullName>
                </value>
                <value>
                    <fullName>Dept of Vet Affairs</fullName>
                </value>
                <value>
                    <fullName>EEOC</fullName>
                </value>
                <value>
                    <fullName>Exec Branch (White House)</fullName>
                </value>
                <value>
                    <fullName>FCC</fullName>
                </value>
                <value>
                    <fullName>FDIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>SubType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Deal Close</fullName>
                </value>
                <value>
                    <fullName>Deal Strategy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Category__c</fullName>
        <label>Support Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARM/Audit</fullName>
                </value>
                <value>
                    <fullName>CPQ &amp; Quotes</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Sales Ops Projects</fullName>
                </value>
                <value>
                    <fullName>SFDC – ADR</fullName>
                </value>
                <value>
                    <fullName>SFDC – Reports</fullName>
                </value>
                <value>
                    <fullName>SFDC – Support</fullName>
                </value>
                <value>
                    <fullName>SFDC – Territory</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Product_Family_Name__c</fullName>
        <description>SMS:863</description>
        <label>Support Product Family Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Product_Name__c</fullName>
        <label>Support Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Picked_Up__c</fullName>
        <label>Time Picked Up</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Submitted_Approved__c</fullName>
        <label>Time Submitted/Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>MOD(FLOOR( ( DATEVALUE(CreatedDate) -DATEVALUE(&quot;2006-01-01&quot; ))/7),52)-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Open_Projects</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>Case_Age__c</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Cases__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Sales_Ops_Projects</value>
        </filters>
        <label>All - Open Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Ops_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Sales_Support_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Case_Requestor__c</columns>
        <columns>Requestor_High_Level_Division__c</columns>
        <columns>CPQ_System__c</columns>
        <columns>Support_Category__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Quote_Proposal__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Case_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Sales_Support</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All Open Sales Support Cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Ops_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Sales_Support_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Case_Requestor__c</columns>
        <columns>Requestor_High_Level_Division__c</columns>
        <columns>CPQ_System__c</columns>
        <columns>Support_Category__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Quote_Proposal__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Case_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Sales_Support</value>
        </filters>
        <label>All Sales Support Cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Ops_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Requests_Admin_Case</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.TYPE</columns>
        <columns>Case_Requestor__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Account__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Data Requests Admin</label>
        <language>en_US</language>
        <queue>Data_Requests_Admin</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Cancellation_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Account__c</columns>
        <columns>Cancellation_Amount__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Cancellation_Approved__c</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Sales_Cancellation</value>
        </filters>
        <filters>
            <field>My_Cases__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Cancellation Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Closed_Projects</fullName>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Case_Age__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Cases__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Sales_Ops_Projects</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My - Closed Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Ops_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Projects</fullName>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Case_Age__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Current_Due_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Cases__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Sales_Ops_Projects</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My - Open Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>Sales_Ops_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Sales411_All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Requestor_High_Level_Division__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Category__c</columns>
        <columns>Professional_Client_Services__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Cases__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Sales411</value>
        </filters>
        <label>My Sales411 - All Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Sales411_Closed_Cases</fullName>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Requestor_High_Level_Division__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Category__c</columns>
        <columns>Professional_Client_Services__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Cases__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Sales411</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Sales411 - Closed Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Sales411_Escalated_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Requestor_High_Level_Division__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Category__c</columns>
        <columns>Professional_Client_Services__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Cases__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Sales411</value>
        </filters>
        <filters>
            <field>Has_Been_Escalated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Sales411 - Escalated Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Sales411_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Requestor_High_Level_Division__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Category__c</columns>
        <columns>Professional_Client_Services__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Cases__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Sales411</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Sales411 - Open Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Sales_Support_All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>Support_Category__c</columns>
        <columns>CASES.SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Cases__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Sales_Support</value>
        </filters>
        <label>My Sales Support - All Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Sales_Support_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>Support_Category__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Cases__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Sales_Support</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Sales Support - Closed Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Sales_Support_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>Support_Category__c</columns>
        <columns>CASES.SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Cases__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Sales_Support</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Sales Support - Open Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Team_s_Sales411_Open_Cases</fullName>
        <booleanFilter>2 AND (3 OR 1) AND 4</booleanFilter>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Requestor_High_Level_Division__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Category__c</columns>
        <columns>Professional_Client_Services__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Cases__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Sales411</value>
        </filters>
        <filters>
            <field>My_Team__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Team&apos;s Sales411 - Open Cases</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>AMS_Cancellation</fullName>
        <active>true</active>
        <businessProcess>Sales Cancellation</businessProcess>
        <label>AMS Cancellation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Data_Request</fullName>
        <active>true</active>
        <businessProcess>Account Data Requests</businessProcess>
        <label>Account Data Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Market_Segment_Sub_Segment_Change</fullName>
        <active>true</active>
        <businessProcess>Account Data Requests</businessProcess>
        <label>Market Segment / Sub Segment Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Prospect_Request</fullName>
        <active>true</active>
        <businessProcess>Account Data Requests</businessProcess>
        <label>New Prospect Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity_Quick_Create</fullName>
        <active>true</active>
        <businessProcess>Opportunity Quick Create</businessProcess>
        <label>Opportunity Quick Create</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales411</fullName>
        <active>true</active>
        <businessProcess>Standard Case</businessProcess>
        <label>Sales411</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Cancellation</fullName>
        <active>true</active>
        <businessProcess>Sales Cancellation</businessProcess>
        <label>Sales Cancellation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Coordinator</fullName>
        <active>true</active>
        <businessProcess>Coordinators</businessProcess>
        <label>Sales Coordinator</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Ops_Projects</fullName>
        <active>true</active>
        <businessProcess>Sales Ops Projects</businessProcess>
        <label>Sales Ops Projects</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Support</fullName>
        <active>true</active>
        <businessProcess>Sales Support</businessProcess>
        <label>Sales Support</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ADR_Duplicate_Record_Request</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Type,&quot;Duplicate&quot;) , 
ISBLANK( Merge_with_Account__c ) )</errorConditionFormula>
        <errorMessage>For Duplicate requests, you need to select the Account to be merged in the &quot;Merge With Account&quot; field below.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADR_New_request</fullName>
        <active>true</active>
        <description>Forces rep to leave status as New</description>
        <errorConditionFormula>ISNEW() = TRUE &amp;&amp;  
NOT(ISPICKVAL( Status , &quot;New&quot;) ) &amp;&amp;
OR( RecordTypeId = &quot;0120Z000001Ifje&quot;,
    RecordTypeId = &quot;0120Z000001Ifjf&quot;,
    RecordTypeId = &quot;0120Z000001Ifjg&quot;)</errorConditionFormula>
        <errorMessage>You must change the Status below back to New in order to submit this request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADR_Record_Locked</fullName>
        <active>true</active>
        <errorConditionFormula>AND($User.Id = CreatedById , 
    ISBLANK(Owner:Queue.Id), 
    OR(ISPICKVAL(  Status , &quot;Working&quot;), 
       ISPICKVAL( Status, &quot;Recalled&quot;)),
    OR(RecordTypeId = &quot;0120Z000001Ifje&quot;,
       RecordTypeId = &quot;0120Z000001Ifjf&quot;,
       RecordTypeId = &quot;0120Z000001Ifjg&quot;)
)</errorConditionFormula>
        <errorMessage>Work has begun on this record and it cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Competitor_Required</fullName>
        <active>false</active>
        <description>Other Competitor Information required for all Cancellation Requests</description>
        <errorConditionFormula>ISPICKVAL( Competitor__c , &quot;Other&quot;) &amp;&amp;
 ISBLANK( Other_Competitor__c )</errorConditionFormula>
        <errorMessage>You must enter the Other Competitor details in the Other Competitor field below when Competitor &quot;Other&quot; is selected,</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Quick_Create_Acknowledgement</fullName>
        <active>true</active>
        <errorConditionFormula>RecordTypeId = &quot;0120Z000001Ifmd&quot;
&amp;&amp;  ISPICKVAL( Acknowledgement_Selection__c , &quot;--None--&quot;)</errorConditionFormula>
        <errorMessage>Please select the Acknowledgement at the bottom of the page to proceed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales411_Case_Not_Picked_Up</fullName>
        <active>false</active>
        <errorConditionFormula>AND( RecordTypeId = &quot;01231000001IeLq&quot;,
     ISCHANGED( Status ),
     IsClosed = FALSE,
     Owner:Queue.Id = &quot;00G3100000461nz&quot;
)</errorConditionFormula>
        <errorMessage>You need to Pickup this Case before you can mark it closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales411_Editorial_Case</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Category__c , &quot;Editorial&quot;) &amp;&amp;
ISBLANK( Editorial_Tax_Type_and_or_State__c )</errorConditionFormula>
        <errorMessage>Editorial Tax Type and/or State must be filled out below for an Editorial question.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales411_Professional_Client_Services</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Requestor_High_Level_Division__c = &quot;Strategic &amp; Mid-Market&quot;) 
&amp;&amp; NOT(ISPICKVAL( Professional_Client_Services__c,&quot;&quot;))
&amp;&amp; NOT( $User.ProfileId = &quot;00ei0000000ueQx&quot;)</errorConditionFormula>
        <errorMessage>Professional Client Services Topic field only pertains to Software Representatives. Change the field to --None--</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales411_Status_Change</fullName>
        <active>true</active>
        <errorConditionFormula>IsNew()=TRUE 
&amp;&amp; Not(IsPickVal(Status,&quot;Received&quot;))
&amp;&amp;  RecordTypeId = &quot;01231000001IeLq&quot;</errorConditionFormula>
        <errorMessage>Before submitting this Case, Change the Status back to Received below.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Cancellation</fullName>
        <active>true</active>
        <description>A closed Cancellation Case cannot be re-opened.</description>
        <errorConditionFormula>AND( ISCHANGED( IsClosed ) 
, IsClosed = TRUE
, RecordType.Id = &quot;01231000001IeLq&quot;)</errorConditionFormula>
        <errorMessage>This Case cannot be re-opened once completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Step_Up_Down_Over</fullName>
        <active>false</active>
        <errorConditionFormula>(ispickval(Cancellation_Reason__c ,&quot;Conversion - Step Up&quot;) || ispickval(Cancellation_Reason__c ,&quot;Conversion - Step Down&quot;) || ispickval(Cancellation_Reason__c ,&quot;Conversion - Step Over&quot;)) &amp;&amp; isblank( AMS_Added_Products__c )</errorConditionFormula>
        <errorDisplayField>AMS_Added_Products__c</errorDisplayField>
        <errorMessage>You must select the added products for  conversion.</errorMessage>
    </validationRules>
</CustomObject>